progressif/main/default/objects/Venue__c/Venue__c.object-meta.xml
<CustomObject>
    <description>Un point de diffusion est un endroit (physique ou sur le web) ou un compte diffuse de la musique</description>
    <label>Point de diffusion</label>
    <nameField>
        <label>Nom du lieu de diffusion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points de diffusion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>