progressif/main/default/objects/Venue__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nom du Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Point de diffusions</relationshipLabel>
    <relationshipName>Point_de_diffusions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>