progressif/main/default/objects/Venue__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Commentaire</label>
    <type>TextArea</type>
</CustomField>