progressif/main/default/objects/Venue__c/fields/ExemptedSACEM__c.field-meta.xml
<CustomField>
    <fullName>ExemptedSACEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempté SACEM</label>
    <type>Checkbox</type>
</CustomField>