progressif/main/default/objects/Venue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>Inactif</fullName>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>