progressif/main/default/objects/Venue__c/fields/TECH_PointContactId__c.field-meta.xml
<CustomField>
    <fullName>TECH_PointContactId__c</fullName>
    <externalId>true</externalId>
    <label>TECH_PointContactId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>