progressif/main/default/objects/Venue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Définit le type de lieu de diffusion Liste de valeurs : Site internet, Adresse du Compte, Adresse d&#39;un autre Compte, Immatriculation, Salle de Cinéma</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site internet</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Adresse du Compte</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Adresse d&#39;un autre Compte</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Salle de Cinéma</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Immatriculation</fullName>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>