progressif/main/default/objects/Venue__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Permet de définir l&#39;adresse du site internet concerné</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>