progressif/main/default/objects/Venue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Type__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>